apps/argocd/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
    - name: internal-gateway
      namespace: gateway
      sectionName: http
    - name: internal-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - argocd.injunweb.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
        - headers:
            - name: Content-Type
              type: Exact
              value: application/grpc
      backendRefs:
        - name: argocd-server
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server-webhook
  namespace: argocd
spec:
  parentRefs:
    - name: external-gateway
      namespace: gateway
      sectionName: http
    - name: external-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - argocdwebhook.injunweb.com
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/webhook
      backendRefs:
        - name: argocd-server
          port: 80
